parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> doprogram ID var rut main END
Rule 2     doprogram -> PROGRAM
Rule 3     main -> BEGIN est END
Rule 4     var -> v
Rule 5     var -> var v
Rule 6     rut -> r
Rule 7     rut -> rut r
Rule 8     rut -> empty
Rule 9     empty -> <empty>
Rule 10    v -> INTEGER c1
Rule 11    v -> REAL c1
Rule 12    c1 -> ID
Rule 13    c1 -> c1 , ID
Rule 14    c1 -> ID LPAREN CTE RPAREN
Rule 15    c1 -> c1 , ID LPAREN CTE RPAREN
Rule 16    c1 -> ID LPAREN CTE , CTE RPAREN
Rule 17    c1 -> c1 , ID LPAREN CTE , CTE RPAREN
Rule 18    r -> SUBROUTINE idsubroutine est END
Rule 19    idsubroutine -> ID
Rule 20    s -> CALL ID LPAREN RPAREN
Rule 21    est -> s
Rule 22    est -> est s
Rule 23    iddim -> pushid LPAREN ea RPAREN
Rule 24    iddim -> pushid LPAREN ea , ea RPAREN
Rule 25    printiddim -> pushid LPAREN ea RPAREN
Rule 26    printiddim -> pushid LPAREN ea , ea RPAREN
Rule 27    s -> pushid = ea
Rule 28    s -> iddim = ea
Rule 29    pushid -> ID
Rule 30    s -> READ FLECHA ID
Rule 31    s -> PRINT FLECHA TEXT
Rule 32    s -> PRINT FLECHA checkid
Rule 33    checkid -> ID
Rule 34    checkid -> printiddim
Rule 35    s -> estif c2 estelse est END
Rule 36    s -> estif c2 END
Rule 37    estif -> IF
Rule 38    c2 -> el estthen est
Rule 39    c2 -> c2 estelsif el estthen est
Rule 40    estthen -> THEN
Rule 41    estelse -> ELSE
Rule 42    estelsif -> ELSIF
Rule 43    s -> DO pushid = first , last , increment est END
Rule 44    s -> DO pushid = first , last est END
Rule 45    s -> estdo est END
Rule 46    s -> EXIT
Rule 47    estdo -> DO
Rule 48    first -> cteid
Rule 49    cteid -> pushid
Rule 50    cteid -> pushcte
Rule 51    last -> cteid
Rule 52    increment -> pushcte
Rule 53    ea -> md
Rule 54    ea -> ea hacesuma md
Rule 55    hacesuma -> SUMA
Rule 56    ea -> ea haceresta md
Rule 57    haceresta -> RESTA
Rule 58    md -> exp
Rule 59    md -> md hacemult exp
Rule 60    hacemult -> MULTIPLICACION
Rule 61    md -> md hacediv exp
Rule 62    hacediv -> DIVISION
Rule 63    exp -> pushid
Rule 64    exp -> iddim
Rule 65    exp -> pushcte
Rule 66    pushcte -> CTE
Rule 67    exp -> parenIZQ ea parenDER
Rule 68    parenIZQ -> LPAREN
Rule 69    parenDER -> RPAREN
Rule 70    el -> eand
Rule 71    el -> el haceor eand
Rule 72    haceor -> OR
Rule 73    eand -> enot
Rule 74    eand -> eand haceand enot
Rule 75    haceand -> AND
Rule 76    enot -> er
Rule 77    enot -> hacenot pushid
Rule 78    hacenot -> NOT
Rule 79    er -> parenIZQ el parenDER
Rule 80    er -> c4 hacemenor c5
Rule 81    hacemenor -> MENOR
Rule 82    er -> c4 hacemenorigual c5
Rule 83    hacemenorigual -> MENOR_IGUAL
Rule 84    er -> c4 hacemayor c5
Rule 85    hacemayor -> MAYOR
Rule 86    er -> c4 hacemayorigual c5
Rule 87    hacemayorigual -> MAYOR_IGUAL
Rule 88    er -> c4 haceigual c5
Rule 89    haceigual -> IGUAL
Rule 90    er -> c4 hacedesigual c5
Rule 91    hacedesigual -> DESIGUAL
Rule 92    c4 -> pushid
Rule 93    c4 -> iddim
Rule 94    c5 -> c4
Rule 95    c5 -> pushcte

Terminals, with rules where they appear

,                    : 13 15 16 17 17 24 26 43 43 44
=                    : 27 28 43 44
AND                  : 75
BEGIN                : 3
CALL                 : 20
CTE                  : 14 15 16 16 17 17 66
DESIGUAL             : 91
DIVISION             : 62
DO                   : 43 44 47
ELSE                 : 41
ELSIF                : 42
END                  : 1 3 18 35 36 43 44 45
EXIT                 : 46
FLECHA               : 30 31 32
ID                   : 1 12 13 14 15 16 17 19 20 29 30 33
IF                   : 37
IGUAL                : 89
INTEGER              : 10
LPAREN               : 14 15 16 17 20 23 24 25 26 68
MAYOR                : 85
MAYOR_IGUAL          : 87
MENOR                : 81
MENOR_IGUAL          : 83
MULTIPLICACION       : 60
NOT                  : 78
OR                   : 72
PRINT                : 31 32
PROGRAM              : 2
READ                 : 30
REAL                 : 11
RESTA                : 57
RPAREN               : 14 15 16 17 20 23 24 25 26 69
SUBROUTINE           : 18
SUMA                 : 55
TEXT                 : 31
THEN                 : 40
error                : 

Nonterminals, with rules where they appear

c1                   : 10 11 13 15 17
c2                   : 35 36 39
c4                   : 80 82 84 86 88 90 94
c5                   : 80 82 84 86 88 90
checkid              : 32
cteid                : 48 51
doprogram            : 1
ea                   : 23 24 24 25 26 26 27 28 54 56 67
eand                 : 70 71 74
el                   : 38 39 71 79
empty                : 8
enot                 : 73 74
er                   : 76
est                  : 3 18 22 35 38 39 43 44 45
estdo                : 45
estelse              : 35
estelsif             : 39
estif                : 35 36
estthen              : 38 39
exp                  : 58 59 61
first                : 43 44
haceand              : 74
hacedesigual         : 90
hacediv              : 61
haceigual            : 88
hacemayor            : 84
hacemayorigual       : 86
hacemenor            : 80
hacemenorigual       : 82
hacemult             : 59
hacenot              : 77
haceor               : 71
haceresta            : 56
hacesuma             : 54
iddim                : 28 64 93
idsubroutine         : 18
increment            : 43
last                 : 43 44
main                 : 1
md                   : 53 54 56 59 61
parenDER             : 67 79
parenIZQ             : 67 79
printiddim           : 34
programa             : 0
pushcte              : 50 52 65 95
pushid               : 23 24 25 26 27 43 44 49 63 77 92
r                    : 6 7
rut                  : 1 7
s                    : 21 22
v                    : 4 5
var                  : 1 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . doprogram ID var rut main END
    (2) doprogram -> . PROGRAM

    PROGRAM         shift and go to state 3

    programa                       shift and go to state 1
    doprogram                      shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> doprogram . ID var rut main END

    ID              shift and go to state 4


state 3

    (2) doprogram -> PROGRAM .

    ID              reduce using rule 2 (doprogram -> PROGRAM .)


state 4

    (1) programa -> doprogram ID . var rut main END
    (4) var -> . v
    (5) var -> . var v
    (10) v -> . INTEGER c1
    (11) v -> . REAL c1

    INTEGER         shift and go to state 7
    REAL            shift and go to state 8

    var                            shift and go to state 5
    v                              shift and go to state 6

state 5

    (1) programa -> doprogram ID var . rut main END
    (5) var -> var . v
    (6) rut -> . r
    (7) rut -> . rut r
    (8) rut -> . empty
    (10) v -> . INTEGER c1
    (11) v -> . REAL c1
    (18) r -> . SUBROUTINE idsubroutine est END
    (9) empty -> .

  ! shift/reduce conflict for SUBROUTINE resolved as shift
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    SUBROUTINE      shift and go to state 13
    BEGIN           reduce using rule 9 (empty -> .)

  ! SUBROUTINE      [ reduce using rule 9 (empty -> .) ]

    rut                            shift and go to state 9
    v                              shift and go to state 10
    r                              shift and go to state 11
    empty                          shift and go to state 12

state 6

    (4) var -> v .

    INTEGER         reduce using rule 4 (var -> v .)
    REAL            reduce using rule 4 (var -> v .)
    SUBROUTINE      reduce using rule 4 (var -> v .)
    BEGIN           reduce using rule 4 (var -> v .)


state 7

    (10) v -> INTEGER . c1
    (12) c1 -> . ID
    (13) c1 -> . c1 , ID
    (14) c1 -> . ID LPAREN CTE RPAREN
    (15) c1 -> . c1 , ID LPAREN CTE RPAREN
    (16) c1 -> . ID LPAREN CTE , CTE RPAREN
    (17) c1 -> . c1 , ID LPAREN CTE , CTE RPAREN

    ID              shift and go to state 15

    c1                             shift and go to state 14

state 8

    (11) v -> REAL . c1
    (12) c1 -> . ID
    (13) c1 -> . c1 , ID
    (14) c1 -> . ID LPAREN CTE RPAREN
    (15) c1 -> . c1 , ID LPAREN CTE RPAREN
    (16) c1 -> . ID LPAREN CTE , CTE RPAREN
    (17) c1 -> . c1 , ID LPAREN CTE , CTE RPAREN

    ID              shift and go to state 15

    c1                             shift and go to state 16

state 9

    (1) programa -> doprogram ID var rut . main END
    (7) rut -> rut . r
    (3) main -> . BEGIN est END
    (18) r -> . SUBROUTINE idsubroutine est END

    BEGIN           shift and go to state 19
    SUBROUTINE      shift and go to state 13

    main                           shift and go to state 17
    r                              shift and go to state 18

state 10

    (5) var -> var v .

    INTEGER         reduce using rule 5 (var -> var v .)
    REAL            reduce using rule 5 (var -> var v .)
    SUBROUTINE      reduce using rule 5 (var -> var v .)
    BEGIN           reduce using rule 5 (var -> var v .)


state 11

    (6) rut -> r .

    BEGIN           reduce using rule 6 (rut -> r .)
    SUBROUTINE      reduce using rule 6 (rut -> r .)


state 12

    (8) rut -> empty .

    BEGIN           reduce using rule 8 (rut -> empty .)
    SUBROUTINE      reduce using rule 8 (rut -> empty .)


state 13

    (18) r -> SUBROUTINE . idsubroutine est END
    (19) idsubroutine -> . ID

    ID              shift and go to state 21

    idsubroutine                   shift and go to state 20

state 14

    (10) v -> INTEGER c1 .
    (13) c1 -> c1 . , ID
    (15) c1 -> c1 . , ID LPAREN CTE RPAREN
    (17) c1 -> c1 . , ID LPAREN CTE , CTE RPAREN

    INTEGER         reduce using rule 10 (v -> INTEGER c1 .)
    REAL            reduce using rule 10 (v -> INTEGER c1 .)
    SUBROUTINE      reduce using rule 10 (v -> INTEGER c1 .)
    BEGIN           reduce using rule 10 (v -> INTEGER c1 .)
    ,               shift and go to state 22


state 15

    (12) c1 -> ID .
    (14) c1 -> ID . LPAREN CTE RPAREN
    (16) c1 -> ID . LPAREN CTE , CTE RPAREN

    ,               reduce using rule 12 (c1 -> ID .)
    INTEGER         reduce using rule 12 (c1 -> ID .)
    REAL            reduce using rule 12 (c1 -> ID .)
    SUBROUTINE      reduce using rule 12 (c1 -> ID .)
    BEGIN           reduce using rule 12 (c1 -> ID .)
    LPAREN          shift and go to state 23


state 16

    (11) v -> REAL c1 .
    (13) c1 -> c1 . , ID
    (15) c1 -> c1 . , ID LPAREN CTE RPAREN
    (17) c1 -> c1 . , ID LPAREN CTE , CTE RPAREN

    INTEGER         reduce using rule 11 (v -> REAL c1 .)
    REAL            reduce using rule 11 (v -> REAL c1 .)
    SUBROUTINE      reduce using rule 11 (v -> REAL c1 .)
    BEGIN           reduce using rule 11 (v -> REAL c1 .)
    ,               shift and go to state 22


state 17

    (1) programa -> doprogram ID var rut main . END

    END             shift and go to state 24


state 18

    (7) rut -> rut r .

    BEGIN           reduce using rule 7 (rut -> rut r .)
    SUBROUTINE      reduce using rule 7 (rut -> rut r .)


state 19

    (3) main -> BEGIN . est END
    (21) est -> . s
    (22) est -> . est s
    (20) s -> . CALL ID LPAREN RPAREN
    (27) s -> . pushid = ea
    (28) s -> . iddim = ea
    (30) s -> . READ FLECHA ID
    (31) s -> . PRINT FLECHA TEXT
    (32) s -> . PRINT FLECHA checkid
    (35) s -> . estif c2 estelse est END
    (36) s -> . estif c2 END
    (43) s -> . DO pushid = first , last , increment est END
    (44) s -> . DO pushid = first , last est END
    (45) s -> . estdo est END
    (46) s -> . EXIT
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (37) estif -> . IF
    (47) estdo -> . DO

    CALL            shift and go to state 27
    READ            shift and go to state 31
    PRINT           shift and go to state 32
    DO              shift and go to state 34
    EXIT            shift and go to state 36
    ID              shift and go to state 28
    IF              shift and go to state 37

    est                            shift and go to state 25
    s                              shift and go to state 26
    pushid                         shift and go to state 29
    iddim                          shift and go to state 30
    estif                          shift and go to state 33
    estdo                          shift and go to state 35

state 20

    (18) r -> SUBROUTINE idsubroutine . est END
    (21) est -> . s
    (22) est -> . est s
    (20) s -> . CALL ID LPAREN RPAREN
    (27) s -> . pushid = ea
    (28) s -> . iddim = ea
    (30) s -> . READ FLECHA ID
    (31) s -> . PRINT FLECHA TEXT
    (32) s -> . PRINT FLECHA checkid
    (35) s -> . estif c2 estelse est END
    (36) s -> . estif c2 END
    (43) s -> . DO pushid = first , last , increment est END
    (44) s -> . DO pushid = first , last est END
    (45) s -> . estdo est END
    (46) s -> . EXIT
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (37) estif -> . IF
    (47) estdo -> . DO

    CALL            shift and go to state 27
    READ            shift and go to state 31
    PRINT           shift and go to state 32
    DO              shift and go to state 34
    EXIT            shift and go to state 36
    ID              shift and go to state 28
    IF              shift and go to state 37

    est                            shift and go to state 38
    s                              shift and go to state 26
    pushid                         shift and go to state 29
    iddim                          shift and go to state 30
    estif                          shift and go to state 33
    estdo                          shift and go to state 35

state 21

    (19) idsubroutine -> ID .

    CALL            reduce using rule 19 (idsubroutine -> ID .)
    READ            reduce using rule 19 (idsubroutine -> ID .)
    PRINT           reduce using rule 19 (idsubroutine -> ID .)
    DO              reduce using rule 19 (idsubroutine -> ID .)
    EXIT            reduce using rule 19 (idsubroutine -> ID .)
    ID              reduce using rule 19 (idsubroutine -> ID .)
    IF              reduce using rule 19 (idsubroutine -> ID .)


state 22

    (13) c1 -> c1 , . ID
    (15) c1 -> c1 , . ID LPAREN CTE RPAREN
    (17) c1 -> c1 , . ID LPAREN CTE , CTE RPAREN

    ID              shift and go to state 39


state 23

    (14) c1 -> ID LPAREN . CTE RPAREN
    (16) c1 -> ID LPAREN . CTE , CTE RPAREN

    CTE             shift and go to state 40


state 24

    (1) programa -> doprogram ID var rut main END .

    $end            reduce using rule 1 (programa -> doprogram ID var rut main END .)


state 25

    (3) main -> BEGIN est . END
    (22) est -> est . s
    (20) s -> . CALL ID LPAREN RPAREN
    (27) s -> . pushid = ea
    (28) s -> . iddim = ea
    (30) s -> . READ FLECHA ID
    (31) s -> . PRINT FLECHA TEXT
    (32) s -> . PRINT FLECHA checkid
    (35) s -> . estif c2 estelse est END
    (36) s -> . estif c2 END
    (43) s -> . DO pushid = first , last , increment est END
    (44) s -> . DO pushid = first , last est END
    (45) s -> . estdo est END
    (46) s -> . EXIT
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (37) estif -> . IF
    (47) estdo -> . DO

    END             shift and go to state 41
    CALL            shift and go to state 27
    READ            shift and go to state 31
    PRINT           shift and go to state 32
    DO              shift and go to state 34
    EXIT            shift and go to state 36
    ID              shift and go to state 28
    IF              shift and go to state 37

    s                              shift and go to state 42
    pushid                         shift and go to state 29
    iddim                          shift and go to state 30
    estif                          shift and go to state 33
    estdo                          shift and go to state 35

state 26

    (21) est -> s .

    END             reduce using rule 21 (est -> s .)
    CALL            reduce using rule 21 (est -> s .)
    READ            reduce using rule 21 (est -> s .)
    PRINT           reduce using rule 21 (est -> s .)
    DO              reduce using rule 21 (est -> s .)
    EXIT            reduce using rule 21 (est -> s .)
    ID              reduce using rule 21 (est -> s .)
    IF              reduce using rule 21 (est -> s .)
    ELSE            reduce using rule 21 (est -> s .)
    ELSIF           reduce using rule 21 (est -> s .)


state 27

    (20) s -> CALL . ID LPAREN RPAREN

    ID              shift and go to state 43


state 28

    (29) pushid -> ID .

    =               reduce using rule 29 (pushid -> ID .)
    LPAREN          reduce using rule 29 (pushid -> ID .)
    MENOR           reduce using rule 29 (pushid -> ID .)
    MENOR_IGUAL     reduce using rule 29 (pushid -> ID .)
    MAYOR           reduce using rule 29 (pushid -> ID .)
    MAYOR_IGUAL     reduce using rule 29 (pushid -> ID .)
    IGUAL           reduce using rule 29 (pushid -> ID .)
    DESIGUAL        reduce using rule 29 (pushid -> ID .)
    MULTIPLICACION  reduce using rule 29 (pushid -> ID .)
    DIVISION        reduce using rule 29 (pushid -> ID .)
    SUMA            reduce using rule 29 (pushid -> ID .)
    RESTA           reduce using rule 29 (pushid -> ID .)
    END             reduce using rule 29 (pushid -> ID .)
    CALL            reduce using rule 29 (pushid -> ID .)
    READ            reduce using rule 29 (pushid -> ID .)
    PRINT           reduce using rule 29 (pushid -> ID .)
    DO              reduce using rule 29 (pushid -> ID .)
    EXIT            reduce using rule 29 (pushid -> ID .)
    ID              reduce using rule 29 (pushid -> ID .)
    IF              reduce using rule 29 (pushid -> ID .)
    ELSE            reduce using rule 29 (pushid -> ID .)
    ELSIF           reduce using rule 29 (pushid -> ID .)
    RPAREN          reduce using rule 29 (pushid -> ID .)
    ,               reduce using rule 29 (pushid -> ID .)
    AND             reduce using rule 29 (pushid -> ID .)
    THEN            reduce using rule 29 (pushid -> ID .)
    OR              reduce using rule 29 (pushid -> ID .)


state 29

    (27) s -> pushid . = ea
    (23) iddim -> pushid . LPAREN ea RPAREN
    (24) iddim -> pushid . LPAREN ea , ea RPAREN

    =               shift and go to state 44
    LPAREN          shift and go to state 45


state 30

    (28) s -> iddim . = ea

    =               shift and go to state 46


state 31

    (30) s -> READ . FLECHA ID

    FLECHA          shift and go to state 47


state 32

    (31) s -> PRINT . FLECHA TEXT
    (32) s -> PRINT . FLECHA checkid

    FLECHA          shift and go to state 48


state 33

    (35) s -> estif . c2 estelse est END
    (36) s -> estif . c2 END
    (38) c2 -> . el estthen est
    (39) c2 -> . c2 estelsif el estthen est
    (70) el -> . eand
    (71) el -> . el haceor eand
    (73) eand -> . enot
    (74) eand -> . eand haceand enot
    (76) enot -> . er
    (77) enot -> . hacenot pushid
    (79) er -> . parenIZQ el parenDER
    (80) er -> . c4 hacemenor c5
    (82) er -> . c4 hacemenorigual c5
    (84) er -> . c4 hacemayor c5
    (86) er -> . c4 hacemayorigual c5
    (88) er -> . c4 haceigual c5
    (90) er -> . c4 hacedesigual c5
    (78) hacenot -> . NOT
    (68) parenIZQ -> . LPAREN
    (92) c4 -> . pushid
    (93) c4 -> . iddim
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN

    NOT             shift and go to state 58
    LPAREN          shift and go to state 59
    ID              shift and go to state 28

    c2                             shift and go to state 49
    el                             shift and go to state 50
    eand                           shift and go to state 51
    enot                           shift and go to state 52
    er                             shift and go to state 53
    hacenot                        shift and go to state 54
    pushid                         shift and go to state 55
    parenIZQ                       shift and go to state 56
    c4                             shift and go to state 57
    iddim                          shift and go to state 60

state 34

    (43) s -> DO . pushid = first , last , increment est END
    (44) s -> DO . pushid = first , last est END
    (47) estdo -> DO .
    (29) pushid -> . ID

  ! shift/reduce conflict for ID resolved as shift
    CALL            reduce using rule 47 (estdo -> DO .)
    READ            reduce using rule 47 (estdo -> DO .)
    PRINT           reduce using rule 47 (estdo -> DO .)
    DO              reduce using rule 47 (estdo -> DO .)
    EXIT            reduce using rule 47 (estdo -> DO .)
    IF              reduce using rule 47 (estdo -> DO .)
    ID              shift and go to state 28

  ! ID              [ reduce using rule 47 (estdo -> DO .) ]

    pushid                         shift and go to state 61

state 35

    (45) s -> estdo . est END
    (21) est -> . s
    (22) est -> . est s
    (20) s -> . CALL ID LPAREN RPAREN
    (27) s -> . pushid = ea
    (28) s -> . iddim = ea
    (30) s -> . READ FLECHA ID
    (31) s -> . PRINT FLECHA TEXT
    (32) s -> . PRINT FLECHA checkid
    (35) s -> . estif c2 estelse est END
    (36) s -> . estif c2 END
    (43) s -> . DO pushid = first , last , increment est END
    (44) s -> . DO pushid = first , last est END
    (45) s -> . estdo est END
    (46) s -> . EXIT
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (37) estif -> . IF
    (47) estdo -> . DO

    CALL            shift and go to state 27
    READ            shift and go to state 31
    PRINT           shift and go to state 32
    DO              shift and go to state 34
    EXIT            shift and go to state 36
    ID              shift and go to state 28
    IF              shift and go to state 37

    estdo                          shift and go to state 35
    est                            shift and go to state 62
    s                              shift and go to state 26
    pushid                         shift and go to state 29
    iddim                          shift and go to state 30
    estif                          shift and go to state 33

state 36

    (46) s -> EXIT .

    END             reduce using rule 46 (s -> EXIT .)
    CALL            reduce using rule 46 (s -> EXIT .)
    READ            reduce using rule 46 (s -> EXIT .)
    PRINT           reduce using rule 46 (s -> EXIT .)
    DO              reduce using rule 46 (s -> EXIT .)
    EXIT            reduce using rule 46 (s -> EXIT .)
    ID              reduce using rule 46 (s -> EXIT .)
    IF              reduce using rule 46 (s -> EXIT .)
    ELSE            reduce using rule 46 (s -> EXIT .)
    ELSIF           reduce using rule 46 (s -> EXIT .)


state 37

    (37) estif -> IF .

    NOT             reduce using rule 37 (estif -> IF .)
    LPAREN          reduce using rule 37 (estif -> IF .)
    ID              reduce using rule 37 (estif -> IF .)


state 38

    (18) r -> SUBROUTINE idsubroutine est . END
    (22) est -> est . s
    (20) s -> . CALL ID LPAREN RPAREN
    (27) s -> . pushid = ea
    (28) s -> . iddim = ea
    (30) s -> . READ FLECHA ID
    (31) s -> . PRINT FLECHA TEXT
    (32) s -> . PRINT FLECHA checkid
    (35) s -> . estif c2 estelse est END
    (36) s -> . estif c2 END
    (43) s -> . DO pushid = first , last , increment est END
    (44) s -> . DO pushid = first , last est END
    (45) s -> . estdo est END
    (46) s -> . EXIT
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (37) estif -> . IF
    (47) estdo -> . DO

    END             shift and go to state 63
    CALL            shift and go to state 27
    READ            shift and go to state 31
    PRINT           shift and go to state 32
    DO              shift and go to state 34
    EXIT            shift and go to state 36
    ID              shift and go to state 28
    IF              shift and go to state 37

    s                              shift and go to state 42
    pushid                         shift and go to state 29
    iddim                          shift and go to state 30
    estif                          shift and go to state 33
    estdo                          shift and go to state 35

state 39

    (13) c1 -> c1 , ID .
    (15) c1 -> c1 , ID . LPAREN CTE RPAREN
    (17) c1 -> c1 , ID . LPAREN CTE , CTE RPAREN

    ,               reduce using rule 13 (c1 -> c1 , ID .)
    INTEGER         reduce using rule 13 (c1 -> c1 , ID .)
    REAL            reduce using rule 13 (c1 -> c1 , ID .)
    SUBROUTINE      reduce using rule 13 (c1 -> c1 , ID .)
    BEGIN           reduce using rule 13 (c1 -> c1 , ID .)
    LPAREN          shift and go to state 64


state 40

    (14) c1 -> ID LPAREN CTE . RPAREN
    (16) c1 -> ID LPAREN CTE . , CTE RPAREN

    RPAREN          shift and go to state 65
    ,               shift and go to state 66


state 41

    (3) main -> BEGIN est END .

    END             reduce using rule 3 (main -> BEGIN est END .)


state 42

    (22) est -> est s .

    END             reduce using rule 22 (est -> est s .)
    CALL            reduce using rule 22 (est -> est s .)
    READ            reduce using rule 22 (est -> est s .)
    PRINT           reduce using rule 22 (est -> est s .)
    DO              reduce using rule 22 (est -> est s .)
    EXIT            reduce using rule 22 (est -> est s .)
    ID              reduce using rule 22 (est -> est s .)
    IF              reduce using rule 22 (est -> est s .)
    ELSE            reduce using rule 22 (est -> est s .)
    ELSIF           reduce using rule 22 (est -> est s .)


state 43

    (20) s -> CALL ID . LPAREN RPAREN

    LPAREN          shift and go to state 67


state 44

    (27) s -> pushid = . ea
    (53) ea -> . md
    (54) ea -> . ea hacesuma md
    (56) ea -> . ea haceresta md
    (58) md -> . exp
    (59) md -> . md hacemult exp
    (61) md -> . md hacediv exp
    (63) exp -> . pushid
    (64) exp -> . iddim
    (65) exp -> . pushcte
    (67) exp -> . parenIZQ ea parenDER
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (66) pushcte -> . CTE
    (68) parenIZQ -> . LPAREN

    ID              shift and go to state 28
    CTE             shift and go to state 75
    LPAREN          shift and go to state 59

    pushid                         shift and go to state 68
    ea                             shift and go to state 69
    md                             shift and go to state 70
    exp                            shift and go to state 71
    iddim                          shift and go to state 72
    pushcte                        shift and go to state 73
    parenIZQ                       shift and go to state 74

state 45

    (23) iddim -> pushid LPAREN . ea RPAREN
    (24) iddim -> pushid LPAREN . ea , ea RPAREN
    (53) ea -> . md
    (54) ea -> . ea hacesuma md
    (56) ea -> . ea haceresta md
    (58) md -> . exp
    (59) md -> . md hacemult exp
    (61) md -> . md hacediv exp
    (63) exp -> . pushid
    (64) exp -> . iddim
    (65) exp -> . pushcte
    (67) exp -> . parenIZQ ea parenDER
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (66) pushcte -> . CTE
    (68) parenIZQ -> . LPAREN

    ID              shift and go to state 28
    CTE             shift and go to state 75
    LPAREN          shift and go to state 59

    pushid                         shift and go to state 68
    ea                             shift and go to state 76
    md                             shift and go to state 70
    exp                            shift and go to state 71
    iddim                          shift and go to state 72
    pushcte                        shift and go to state 73
    parenIZQ                       shift and go to state 74

state 46

    (28) s -> iddim = . ea
    (53) ea -> . md
    (54) ea -> . ea hacesuma md
    (56) ea -> . ea haceresta md
    (58) md -> . exp
    (59) md -> . md hacemult exp
    (61) md -> . md hacediv exp
    (63) exp -> . pushid
    (64) exp -> . iddim
    (65) exp -> . pushcte
    (67) exp -> . parenIZQ ea parenDER
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN
    (66) pushcte -> . CTE
    (68) parenIZQ -> . LPAREN

    ID              shift and go to state 28
    CTE             shift and go to state 75
    LPAREN          shift and go to state 59

    iddim                          shift and go to state 72
    ea                             shift and go to state 77
    md                             shift and go to state 70
    exp                            shift and go to state 71
    pushid                         shift and go to state 68
    pushcte                        shift and go to state 73
    parenIZQ                       shift and go to state 74

state 47

    (30) s -> READ FLECHA . ID

    ID              shift and go to state 78


state 48

    (31) s -> PRINT FLECHA . TEXT
    (32) s -> PRINT FLECHA . checkid
    (33) checkid -> . ID
    (34) checkid -> . printiddim
    (25) printiddim -> . pushid LPAREN ea RPAREN
    (26) printiddim -> . pushid LPAREN ea , ea RPAREN
    (29) pushid -> . ID

    TEXT            shift and go to state 79
    ID              shift and go to state 81

    checkid                        shift and go to state 80
    printiddim                     shift and go to state 82
    pushid                         shift and go to state 83

state 49

    (35) s -> estif c2 . estelse est END
    (36) s -> estif c2 . END
    (39) c2 -> c2 . estelsif el estthen est
    (41) estelse -> . ELSE
    (42) estelsif -> . ELSIF

    END             shift and go to state 85
    ELSE            shift and go to state 87
    ELSIF           shift and go to state 88

    estelse                        shift and go to state 84
    estelsif                       shift and go to state 86

state 50

    (38) c2 -> el . estthen est
    (71) el -> el . haceor eand
    (40) estthen -> . THEN
    (72) haceor -> . OR

    THEN            shift and go to state 91
    OR              shift and go to state 92

    estthen                        shift and go to state 89
    haceor                         shift and go to state 90

state 51

    (70) el -> eand .
    (74) eand -> eand . haceand enot
    (75) haceand -> . AND

    THEN            reduce using rule 70 (el -> eand .)
    OR              reduce using rule 70 (el -> eand .)
    RPAREN          reduce using rule 70 (el -> eand .)
    AND             shift and go to state 94

    haceand                        shift and go to state 93

state 52

    (73) eand -> enot .

    AND             reduce using rule 73 (eand -> enot .)
    THEN            reduce using rule 73 (eand -> enot .)
    OR              reduce using rule 73 (eand -> enot .)
    RPAREN          reduce using rule 73 (eand -> enot .)


state 53

    (76) enot -> er .

    AND             reduce using rule 76 (enot -> er .)
    THEN            reduce using rule 76 (enot -> er .)
    OR              reduce using rule 76 (enot -> er .)
    RPAREN          reduce using rule 76 (enot -> er .)


state 54

    (77) enot -> hacenot . pushid
    (29) pushid -> . ID

    ID              shift and go to state 28

    pushid                         shift and go to state 95

state 55

    (92) c4 -> pushid .
    (23) iddim -> pushid . LPAREN ea RPAREN
    (24) iddim -> pushid . LPAREN ea , ea RPAREN

    MENOR           reduce using rule 92 (c4 -> pushid .)
    MENOR_IGUAL     reduce using rule 92 (c4 -> pushid .)
    MAYOR           reduce using rule 92 (c4 -> pushid .)
    MAYOR_IGUAL     reduce using rule 92 (c4 -> pushid .)
    IGUAL           reduce using rule 92 (c4 -> pushid .)
    DESIGUAL        reduce using rule 92 (c4 -> pushid .)
    AND             reduce using rule 92 (c4 -> pushid .)
    THEN            reduce using rule 92 (c4 -> pushid .)
    OR              reduce using rule 92 (c4 -> pushid .)
    RPAREN          reduce using rule 92 (c4 -> pushid .)
    LPAREN          shift and go to state 45


state 56

    (79) er -> parenIZQ . el parenDER
    (70) el -> . eand
    (71) el -> . el haceor eand
    (73) eand -> . enot
    (74) eand -> . eand haceand enot
    (76) enot -> . er
    (77) enot -> . hacenot pushid
    (79) er -> . parenIZQ el parenDER
    (80) er -> . c4 hacemenor c5
    (82) er -> . c4 hacemenorigual c5
    (84) er -> . c4 hacemayor c5
    (86) er -> . c4 hacemayorigual c5
    (88) er -> . c4 haceigual c5
    (90) er -> . c4 hacedesigual c5
    (78) hacenot -> . NOT
    (68) parenIZQ -> . LPAREN
    (92) c4 -> . pushid
    (93) c4 -> . iddim
    (29) pushid -> . ID
    (23) iddim -> . pushid LPAREN ea RPAREN
    (24) iddim -> . pushid LPAREN ea , ea RPAREN

    NOT             shift and go to state 58
    LPAREN          shift and go to state 59
    ID              shift and go to state 28
